force-app/main/default/objects/HDT_TabConfiguration__mdt/HDT_TabConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Tab Configuration</label>
    <pluralLabel>Tab Configuration</pluralLabel>
</CustomObject>