force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/EndpointService__c.field-meta.xml
<CustomField>
    <fullName>EndpointService__c</fullName>
    <label>Endpoint Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>