force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/HasAmountField__c.field-meta.xml
<CustomField>
    <fullName>HasAmountField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Amount Field</label>
    <type>Checkbox</type>
</CustomField>