force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/HasSecondLevel__c.field-meta.xml
<CustomField>
    <fullName>HasSecondLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Second Level</label>
    <type>Checkbox</type>
</CustomField>