force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/SecondLevelAPI_Name__c.field-meta.xml
<CustomField>
    <fullName>SecondLevelAPI_Name__c</fullName>
    <label>Second Level API Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>