force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/ShowTab__c.field-meta.xml
<CustomField>
    <fullName>ShowTab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show tab</label>
    <type>Checkbox</type>
</CustomField>