force-app/main/default/objects/HDT_TabConfiguration__mdt/fields/UseMockService__c.field-meta.xml
<CustomField>
    <fullName>UseMockService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Mock Service</label>
    <type>Checkbox</type>
</CustomField>